fixed background images not showing up

--- a/Style/aboutus.css
+++ b/Style/aboutus.css
@@ -26,14 +26,6 @@
      margin-left: 30px;
    }
    
-   #Home{
-     background-image: linear-gradient(rgba(0, 0, 0,0.05),
-     rgba(0,0,0,0.35)), url(Images/AboutUS/about.jpg);
-     background-repeat: no-repeat;
-     background-size: cover;
-     background-attachment: fixed; 
-   }
-   
    #Second{
      color: whitesmoke;
      min-height: 75vh;
@@ -43,13 +35,13 @@
     margin-left: 12%;
    }
    
-   #Third{
+   /* #Third{
    background-image: linear-gradient(rgba(0, 0, 0,0.15),
    rgba(0,0,0,0.85)), url(Images/HomePage/dev3.jpg);;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
-   }
+   } */
    
    #Third .card, #Third .card-header{
      background: rgba(0,0,0,0.02);
